2006-01-05  Tor Lillqvist  <tml@novell.com>

	* gconf-zip.in: Include the backend DLLs in the runtime zipfile.

2006-01-03  Mark McLoughlin  <mark@skynet.ie>

	Switch on "subtree merging" by default in the defaults
	database.

	* gconf/gconftool.c: (do_get_default_source): add the
	"merged" flag to the default target for
	--makefile-install-rule
	
	* backends/markup-backend.c:
	(resolve_address), (ms_new): add a new "merged" flag
	signalling that the entire tree should be saved as
	a subtree.
	
	* backends/markup-tree.[ch]:
	(markup_tree_get): add "merged" param and set flag
	on MarkupTree struct
	(recursively_load_subtree): copy function from
	gconf-merge-tree.c
	(markup_dir_sync): when saving the tree, save it as a
	merged subtree if the "merged" flag is set
	
	* backends/gconf-merge-tree.c: (recursively_load_subtree):
	remove; it's in markup-tree.c now
	
	* configure.in: remove --enable-gconf-source option which
	was only used when we installed standard-schemas
	
	* standard-schemas: remove old cruft

2006-01-03  Mark McLoughlin  <mark@skynet.ie>

	Pointed out by Nicolas Peninguy <npeniguy@gmail.com>
	in bug #323509

	* gconf/gconf-internals.c: (gconf_value_decode): fix crasher
	with previous fix for decoding schemas

2005-12-30  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "is" "zh_HK" to ALL_LINGUAS.

2005-12-11  Mark McLoughlin  <mark@skynet.ie>

	* backends/markup-tree.c:
	(markup_entry_get_value): re-work the logic for finding
	the best schema for the given locales.
	
2005-12-11  Mark McLoughlin  <mark@skynet.ie>

	* backends/markup-tree.c:
	- Introduce the concept of a "subtree root" - a point
	  in the tree where we save a subtree in a merged file.
	- When loading a subtree (%gconf-tree.xml), take note of
	  any available translations (%gconf-tree-$(locale).xml)
	- When getting/setting/unsetting a schema, ensure that
	  the appropriate translations are loaded
	- When parsing a translations file, allow for missing